# cr8s

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  steps.sh
src/: main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
tests/: rustaceans.rs
