[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc", features = ["json"]}
diesel = {version = "2.0.4", features = ["postgres", "chrono"]}
chrono = "0.4.24"
